--- a/templates/partials/race.html
+++ b/templates/partials/race.html
@@ -1,19 +1,5 @@
-<option value="A">Chinese</option>
-<option value="A">Japanese</option>
-<option value="A">Filipino</option>
-<option value="A">Korean</option>
-<option value="A">Polynesian</option>
-<option value="A">Indian</option>
-<option value="A">Indonesian</option>
-<option value="A">Asian Indian</option>
-<option value="A">Samoan</option>
-<option value="A">Pacific Islander</option>
-<option value="B">Black/African</option>
-<option value="I">American Indian</option>
-<option value="I">Alaskan Native</option>
-<option value="I">Eskimo</option>
-<option value="W">Caucasian</option>
-<option value="W">Mexican</option>
-<option value="W">Puerto Rican</option>
-<option value="W">Cuban</option>
-<option value="W">Central/South American</option>
+<option value="A">Asian</option>
+<option value="B">Black or African American</option>
+<option value="I">American Indian or Alaska Native</option>
+<option value="W">White</option>
+<option value="NHPI">Native Hawaiian or Pacific Islander</option>
