--- a/templates/partials/sex.html
+++ b/templates/partials/sex.html
@@ -1,5 +1,6 @@
 <option value="M">Male</option>
 <option value="F">Female</option>
-<option value="G">Male Impersonator</option>
-<option value="N">Female Impersonator</option>
+<option value="X">Non-Binary</option>
+# <option value="G">Male Impersonator</option>
+# <option value="N">Female Impersonator</option>
  
