--- a/viewer/templates/viewer/index.html
+++ b/viewer/templates/viewer/index.html
@@ -2,6 +2,10 @@
 {% block Title %}OpenEFT | Home{% endblock %}
 {% block content %}
 <br />
+	<div class="text-center mt-5">
+		The Viewer is not currently functional. There is an identified issue with the integration with the an2ktool binary of the NIST Biometric Image Software (NBIS) that underpins this software.<p>It will be fixed in a future release.<p><strong>Please use <a href=https://www.netxsolutions.co.uk/nistviewer.aspx target=_blank>NIST Viewer</a> instead.</strong>
+		<p>
+	</div>
 <div class="content" id="main-content">
     <div class="card bg-dark">
         <div class="card-header">
