Rolling in some changes
Some changes to roll in protections for user data and also some changes made by breymander's fork

--- a/conversion/templates/conversion/index.html
+++ b/conversion/templates/conversion/index.html
@@ -179,4 +179,10 @@ fetch("/static/commits.xml")
         x.innerHTML += out;
     })
 </script>
+
+    <!-- Added button -->
+    <div class="text-center mt-5">
+        <a href="http://localhost:8080/new" class="btn btn-primary btn-lg">Start New EFT</a>
+    </div>
+
     {% endblock %}
