--- a/conversion/templates/conversion/partials/step4.html
+++ b/conversion/templates/conversion/partials/step4.html
@@ -51,7 +51,7 @@
 					<input type="password" class="form-control" placeholder="Re-enter SSN" id="confirm-ssn" name="confirm-ssn">
 				</div>
 				<div class="mb-2">
-					<button type="button" id="validateSsnButton" class="btn btn-primary">Validate</button>
+					<button type="button" id="validateSsnButton" class="btn btn-primary">Validate SSN</button>
 					<span id="ssnValidationResult" class="text-danger ms-2"></span> <!-- Validation result message -->
 				</div>
             </div>
