--- a/templates/partials/fingers.html
+++ b/templates/partials/fingers.html
@@ -1,4 +1,4 @@
-<option value="">None</option>
+<option value="" selected>None</option>
 <option value="01">Right Thumb</option>
 <option value="02">Right Index</option>
 <option value="03">Right Middle</option>
