--- a/conversion/templates/conversion/index.html
+++ b/conversion/templates/conversion/index.html
@@ -194,7 +194,7 @@ fetch("/static/releases.xml")
 
 <!-- Added button with custom styles -->
 <div class="text-center mt-5">
-    <a href="http://localhost:8080/new" class="btn custom-btn btn-lg">Start New EFT</a>
+    <a href="/new" class="btn custom-btn btn-lg">Start New EFT</a>
 </div>
 
 <!-- Inline styles for button customization -->
