--- a/conversion/templates/conversion/partials/step5.html
+++ b/conversion/templates/conversion/partials/step5.html
@@ -13,7 +13,7 @@
         <div class="col-lg-7 mx-0 px-0">
             <div>
                 <div class="input-group mb-2">
-                    <span class="input-group-text">State Born</span>
+                    <span class="input-group-text">State/Country Born</span>
                     <select class="form-select" name="state" id="state">
                         {% include "partials/state.html" %}
                     </select>
